--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -106,7 +106,13 @@
             android:theme="@android:style/Theme.Holo">
         </activity>
         
-
+        <activity 
+            android:name="com.kellislabs.bartsy.MainActivity"
+            android:theme="@style/AppTheme"
+            >
+        </activity>
+        
+        
         <meta-data
 	    android:name="com.google.android.maps.v2.API_KEY"
 	    android:value="AIzaSyDzwY-G76VRggOFcM9wWIm8jo9FBMvOuEI"/>
