New theme for map activity
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@37 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -92,7 +92,8 @@
         
         <activity 
             android:name="com.kellislabs.bartsy.MapActivity"
-            android:label="People at nearby Bartsy points" >
+            android:theme="@style/AppTheme"
+            android:label="Bartsy points" >
         </activity>
         
         <activity 
