--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -79,7 +79,7 @@
         </service>service>
         
         <activity
-            android:name=".BartsyActivity"
+            android:name=".VenueActivity"
             android:launchMode="singleTop"
             android:label="@string/app_name" 
             android:theme="@style/AppTheme">
