--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,7 +36,6 @@
     
     <application
         android:allowBackup="true"
-        android:uiOptions="splitActionBarWhenNarrow"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:name=".BartsyApplication"> 
@@ -93,7 +92,7 @@
         <activity 
             android:name="com.kellislabs.bartsy.MapActivity"
             android:theme="@style/AppTheme"
-            android:label="Bartsy points" >
+            android:label="Bartsy Service Stations" >
         </activity>
         
         <activity 
