Several updates in UI and name changes to start removing unused code
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@43 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -41,7 +41,7 @@
         android:name=".BartsyApplication"> 
         
         <activity
-            android:name=".AllJoynTabWidget"
+            android:name="wifi.AllJoynTabWidget"
             android:label="@string/app_name">
            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -50,13 +50,13 @@
         </activity>
 
         <activity 
-            android:name=".AllJoynHostActivity" 
+            android:name="wifi.AllJoynHostActivity" 
             android:windowSoftInputMode="adjustResize"
             android:label="AllJoyn Chat Channel Hosting">
         </activity>
 
         <activity 
-            android:name=".AllJoynUseActivity"
+            android:name="wifi.AllJoynUseActivity"
             android:windowSoftInputMode="adjustResize"
             android:label="AllJoyn Chat Channel Usage">
         </activity>
