--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -41,7 +41,7 @@
         android:name=".BartsyApplication"> 
         
         <activity
-            android:name="wifi.AllJoynTabWidget"
+            android:name="com.kellislabs.bartsy.DebugWidget"
             android:label="@string/app_name">
            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
