--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -41,7 +41,7 @@
         android:name=".BartsyApplication"> 
         
         <activity
-            android:name="com.kellislabs.bartsy.DebugWidget"
+            android:name=".DebugWidget"
             android:label="@string/app_name">
            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -74,7 +74,7 @@
         </activity>
         
         <service
-            android:name="AllJoynService">
+            android:name="ConnectivityService">
         </service>service>
         
         <activity
