--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,125 +7,139 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="17" />
-    
+
     <uses-feature
         android:glEsVersion="0x00020000"
-        android:required="true"/>
+        android:required="true" />
 
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    
+
     <!-- Permission required to use the TCP transport -->
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
-    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE"></uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" >
+    </uses-permission>
     <!-- Permission required to use the Bluetooth transport -->
-    <uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"></uses-permission>    
+    <uses-permission android:name="android.permission.BLUETOOTH" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" >
+    </uses-permission>
+
     <permission
         android:name="com.kellislabs.bartsy.permission.MAPS_RECEIVE"
-        android:protectionLevel="signature"/>
-	<uses-permission android:name="com.kellislabs.bartsy.permission.MAPS_RECEIVE"/>
-	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-	<uses-permission android:name="android.permission.CAMERA" />
-	<uses-permission android:name="android.permission.VIBRATE" />
-    
-	<uses-feature android:name="android.hardware.camera" android:required="false" />
-	<uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
-	<uses-feature android:name="android.hardware.camera.flash" android:required="false" />
-	
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="com.kellislabs.bartsy.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera.autofocus"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera.flash"
+        android:required="false" />
+
     <application
+        android:name=".BartsyApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:name=".BartsyApplication"> 
-        
+        android:label="@string/app_name" >
+
         <!-- Activities responsible for gathering payment info -->
-	    <activity android:name="io.card.payment.CardIOActivity" android:configChanges="keyboardHidden|orientation" />
-	    <activity android:name="io.card.payment.DataEntryActivity" android:screenOrientation="portrait" />
-        
+        <activity
+            android:name="io.card.payment.CardIOActivity"
+            android:configChanges="keyboardHidden|orientation" />
+        <activity
+            android:name="io.card.payment.DataEntryActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".DebugWidget"
-            android:label="@string/app_name">
-           <intent-filter>
+            android:label="@string/app_name" >
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity 
-            android:name="wifi.AllJoynHostActivity" 
-            android:windowSoftInputMode="adjustResize"
-            android:label="AllJoyn Chat Channel Hosting">
+        <activity
+            android:name="wifi.AllJoynHostActivity"
+            android:label="AllJoyn Chat Channel Hosting"
+            android:windowSoftInputMode="adjustResize" >
         </activity>
-
-        <activity 
+        <activity
             android:name="wifi.AllJoynUseActivity"
-            android:windowSoftInputMode="adjustResize"
-            android:label="AllJoyn Chat Channel Usage">
+            android:label="AllJoyn Chat Channel Usage"
+            android:windowSoftInputMode="adjustResize" >
         </activity>
-        
-        <activity android:name=".ContactsService"
-                  android:label="Contacts Service"
-                  android:screenOrientation="portrait"
-                  android:configChanges="keyboardHidden|orientation">
+        <activity
+            android:name=".ContactsService"
+            android:configChanges="keyboardHidden|orientation"
+            android:label="Contacts Service"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".ContactsClient"
+            android:configChanges="keyboardHidden|orientation"
+            android:label="Contacts Client"
+            android:screenOrientation="portrait" >
         </activity>
 
-        <activity android:name=".ContactsClient"
-                  android:label="Contacts Client"
-                  android:screenOrientation="portrait"
-                  android:configChanges="keyboardHidden|orientation">
+        <service android:name="ConnectivityService" >
+        </service>
+
+        <activity
+            android:name=".AndroidFacebookConnectActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTop"
+            android:theme="@style/AppTheme" >
         </activity>
-        
-        <service
-            android:name="ConnectivityService">
-        </service>service>
-        
         <activity
             android:name=".VenueActivity"
+            android:label="@string/app_name"
             android:launchMode="singleTop"
-            android:label="@string/app_name" 
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme" >
         </activity>
-        
-        <activity 
+        <activity
             android:name="com.kellislabs.bartsy.SettingsActivity"
-            android:label="SettingsActivity">
+            android:label="SettingsActivity" >
         </activity>
-        
-        <activity 
+        <activity
             android:name="com.kellislabs.bartsy.MapActivity"
-            android:theme="@style/AppTheme"
-            android:label="Bartsy Service Stations" >
+            android:label="Bartsy Service Stations"
+            android:theme="@style/AppTheme" >
         </activity>
-        
-        <activity 
+        <activity
             android:name="com.kellislabs.bartsy.NotificationsActivity"
             android:label="Bartsy notifications" >
         </activity>
-
-        <activity 
+        <activity
             android:name="com.kellislabs.bartsy.InitActivity"
-            android:label="Your one stop to nightlife!" 
-            android:theme="@android:style/Theme.Holo">
+            android:label="Your one stop to nightlife!"
+            android:theme="@android:style/Theme.Holo" >
         </activity>
-        
-        <activity 
+        <activity
             android:name="com.kellislabs.bartsy.MainActivity"
-            android:theme="@style/AppTheme"
-            >
+            android:theme="@style/AppTheme" >
         </activity>
-        
-        
+
         <meta-data
-	    android:name="com.google.android.maps.v2.API_KEY"
-	    android:value="AIzaSyDzwY-G76VRggOFcM9wWIm8jo9FBMvOuEI"/>
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyDzwY-G76VRggOFcM9wWIm8jo9FBMvOuEI" />
     </application>
 
 </manifest>
