--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,6 +12,20 @@
         android:glEsVersion="0x00020000"
         android:required="true" />
 
+    <!-- App receives GCM messages. -->
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <!-- GCM connects to Google Services. -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <!-- GCM requires a Google account. -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <!-- Keeps the processor from sleeping when a message is received. -->
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="com.kellislabs.bartsy.permission.C2D_MESSAGE" />
+
+    <permission
+        android:name="com.kellislabs.bartsy.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
@@ -99,15 +113,12 @@
             android:screenOrientation="portrait" >
         </activity>
 
-        <service android:name="ConnectivityService" >
+        <!--
+        <service
+            android:name="ConnectivityService">
         </service>
+        -->
 
-        <activity
-            android:name=".AndroidFacebookConnectActivity"
-            android:label="@string/app_name"
-            android:launchMode="singleTop"
-            android:theme="@style/AppTheme" >
-        </activity>
         <activity
             android:name=".VenueActivity"
             android:label="@string/app_name"
@@ -136,6 +147,22 @@
             android:name="com.kellislabs.bartsy.MainActivity"
             android:theme="@style/AppTheme" >
         </activity>
+
+        <receiver
+            android:name="com.google.android.gcm.GCMBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+
+                <category android:name="com.kellislabs.bartsy" />
+            </intent-filter>
+        </receiver>
+
+        <service
+            android:name="com.kellislabs.bartsy.GCMIntentService"
+            android:enabled="true" >
+        </service>
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
