Added Facebook activity
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@76 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -107,14 +107,19 @@
             android:screenOrientation="portrait" >
         </activity>
         <activity
+            android:name=".AndroidFacebookConnectActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:label="Contacts Client"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
             android:name=".ContactsClient"
             android:configChanges="keyboardHidden|orientation"
             android:label="Contacts Client"
             android:screenOrientation="portrait" >
         </activity>
 
-        <service
-            android:name="ConnectivityService">
+        <service android:name="ConnectivityService" >
         </service>
 
         <activity
