--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -122,6 +122,15 @@
         <service android:name="ConnectivityService" >
         </service>
 
+        
+         <activity
+            android:name=".VenueRegistration"
+            android:label="@string/app_name"
+            android:launchMode="singleTop"
+            android:screenOrientation="landscape"
+            android:theme="@style/AppTheme" >
+        </activity>
+        
         <activity
             android:name=".VenueActivity"
             android:label="@string/app_name"
