--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="libs/httpmime-4.1.2.jar"/>
 	<classpathentry kind="lib" path="libs/ormlite-android-4.41.jar"/>
 	<classpathentry kind="lib" path="libs/ormlite-core-4.41.jar"/>
+	<classpathentry kind="lib" path="libs/card.io.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
