Renamed package to com.vendsy.bartsy and changed Google API and Zooz keys to use Vendsy developer accounts.
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@111 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -139,7 +139,7 @@
         </receiver>
 
         <service
-            android:name="com.vendsy.bartsy.service.GCMIntentServiceentService"
+            android:name="com.vendsy.bartsy.service.GCMIntentService"
             android:enabled="true" >
         </service>
 
