--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -77,13 +77,13 @@
         <!-- Activities responsible for gathering payment info -->
         <activity
             android:name="io.card.payment.CardIOActivity"
-            android:configChanges="keyboardHidden|orientation" />
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="portrait" />
         <activity
             android:name="io.card.payment.DataEntryActivity"
             android:screenOrientation="portrait" />
-        
         <activity
-         	android:name="com.vendsy.bartsy.facebook.AndroidFacebookConnectActivity"
+            android:name="com.vendsy.bartsy.facebook.AndroidFacebookConnectActivity"
             android:configChanges="keyboardHidden|orientation"
             android:label="Contacts Client"
             android:screenOrientation="portrait" >
@@ -91,38 +91,40 @@
 
         <service android:name="ConnectivityService" >
         </service>
-        
+
         <activity
             android:name=".VenueActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme" >
         </activity>
-        
         <activity
             android:name=".SettingsActivity"
-            android:label="SettingsActivity" >
+            android:label="SettingsActivity"
+            android:screenOrientation="portrait" >
         </activity>
-        
         <activity
             android:name=".MapActivity"
             android:label="Bartsy Service Stations"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme" >
         </activity>
-        
         <activity
             android:name=".InitActivity"
             android:label="Your one stop to nightlife!"
+            android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Holo" >
         </activity>
-
         <activity
             android:name=".MainActivity"
             android:icon="@drawable/ic_launcher"
-        	android:label="@string/app_name" 
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -143,24 +145,21 @@
             android:enabled="true" >
         </service>
 
-       
-        
-
         <!-- Pay Pal -->
         <activity
             android:name="com.paypal.android.MEP.PayPalActivity"
             android:configChanges="keyboardHidden|orientation"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
-		 
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyCgZRYaiDOrJp9hNO6xu1UracE_dOhgmRI" />
-       
-       <!-- 
+
+        <!--
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyB7glbDqha_iJiS9ryvkWPUrjMcxitm9zw" />
-		 -->
+        -->
     </application>
 
 </manifest>
