- Displaying custom drinks - Saving spirits and mixers in the BartsyApplication to reuse in OrderCustomDrinkActivity
TODO : OrderCustomDrinkActivity has to done for adding mixers and order processing

git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@181 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -119,6 +119,9 @@
         <activity android:name=".CustomDrinksActivity"
             android:screenOrientation="portrait">
         </activity>
+        <activity android:name=".OrderCustomDrinkActivity"
+            android:screenOrientation="portrait">
+        </activity>
         
         <activity
             android:name=".MainActivity"
