Added advanced user profile initialization, including the ability to edit profile information and add a payment method. This code is still in progress as credit card information is not saved or otherwise processed yet and the code doesn't download profile information if the profile already exists. Also, some methods need to be changed to take a more generic profile instead of "Person" (a Google+ object)
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@183 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -116,6 +116,13 @@
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Holo" >
         </activity>
+        <activity
+            android:name=".UserProfileActivity"
+            android:label="Edit your profile"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden" 
+            android:theme="@style/AppTheme" >
+        </activity>
         <activity android:name=".CustomDrinksActivity"
             android:screenOrientation="portrait">
         </activity>
