--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -76,7 +76,7 @@
 
         <activity 
             android:name=".SplashActivity"            
-            android:theme="@android:style/Theme.Holo.NoActionBar"
+            android:theme="@style/Theme.Sherlock.NoActionBar" 
             android:icon="@drawable/ic_launcher"
             android:label="@string/app_name"
             >
@@ -90,6 +90,7 @@
         <activity
             android:name="io.card.payment.CardIOActivity"
             android:configChanges="keyboardHidden|orientation"
+            android:theme="@style/Theme.Sherlock" 
             android:screenOrientation="portrait" />
         <activity
             android:name="io.card.payment.DataEntryActivity"
@@ -109,7 +110,8 @@
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme" >
+            android:theme="@style/Theme.Sherlock" 
+            >
         </activity>
         <activity
             android:name=".SettingsActivity"
@@ -120,20 +122,23 @@
             android:name=".MapActivity"
             android:label="Bartsy Service Stations"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme" >
+            android:theme="@style/Theme.Sherlock" 
+		>
         </activity>
         <activity
             android:name=".InitActivity"
             android:label="Your one stop to nightlife!"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Holo" >
+            android:theme="@style/Theme.Sherlock" 
+            >
         </activity>
         <activity
             android:name=".UserProfileActivity"
             android:label="Edit your profile"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysHidden" 
-            android:theme="@style/AppTheme" >
+            android:theme="@style/Theme.Sherlock" 
+			>
         </activity>
         <activity android:name=".CustomDrinksActivity"
             android:screenOrientation="portrait">
@@ -145,7 +150,8 @@
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme" >
+            android:theme="@style/Theme.Sherlock" 
+            >
         </activity>
 
         <receiver
