Changed the label for facebook activity
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@222 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -98,7 +98,7 @@
         <activity
             android:name="com.vendsy.bartsy.facebook.AndroidFacebookConnectActivity"
             android:configChanges="keyboardHidden|orientation"
-            android:label="Contacts Client"
+            android:label="@string/app_name"
             android:screenOrientation="portrait" >
         </activity>
 
