--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,7 +11,8 @@
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
-
+    
+	
     <!-- App receives GCM messages. -->
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <!-- GCM connects to Google Services. -->
@@ -95,15 +96,13 @@
         <activity
             android:name="io.card.payment.DataEntryActivity"
             android:screenOrientation="portrait" />
-        <activity
-            android:name="com.vendsy.bartsy.facebook.AndroidFacebookConnectActivity"
-            android:configChanges="keyboardHidden|orientation"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait" >
-        </activity>
 
         <service android:name="ConnectivityService" >
         </service>
+        
+        <!-- Facebook -->
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/fb_app_id"/>
+		<activity android:name="com.facebook.LoginActivity"/>
 
         <activity
             android:name=".VenueActivity"
@@ -146,7 +145,7 @@
         <activity android:name=".OrderCustomDrinkActivity"
             android:screenOrientation="portrait">
         </activity>
-        
+        <activity android:name="com.vendsy.bartsy.FacebookActivity"/>
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait"
