1. Display correct distance to venues based on phone's location 2. Sort list of venues by distance 3. Show additional information (people count and wifi present) in venue list 4. Gray out closed venues in list 5. Fixed title of venue list UI
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@247 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -119,7 +119,7 @@
         </activity>
         <activity
             android:name=".MapActivity"
-            android:label="Bartsy Service Stations"
+            android:label="Check in at a Bartsy venue..."
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Sherlock" 
 		>
