Added handling of drink rejection and started on local timeouts and display of time.
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@268 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -99,6 +99,8 @@
 
         <service android:name="ConnectivityService" >
         </service>
+        <service android:name="com.vendsy.bartsy.venue.service.BackgroundService" >
+        </service>
         
         <!-- Facebook -->
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/fb_app_id"/>
