Enabled background service on app. Need to disable when user checks out... I added that as a bug for myself.
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@294 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -97,9 +97,7 @@
             android:name="io.card.payment.DataEntryActivity"
             android:screenOrientation="portrait" />
 
-        <service android:name="ConnectivityService" >
-        </service>
-        <service android:name="com.vendsy.bartsy.venue.service.BackgroundService" >
+        <service android:name="com.vendsy.bartsy.service.BackgroundService" >
         </service>
         
         <!-- Facebook -->
@@ -150,9 +148,11 @@
 			>
         </activity>
         <activity android:name=".CustomDrinksActivity"
+            android:label="Select a base spirit"
             android:screenOrientation="portrait">
         </activity>
         <activity android:name=".OrderCustomDrinkActivity"
+            android:label="Customize and order..."
             android:screenOrientation="portrait">
         </activity>
         <activity android:name="com.vendsy.bartsy.FacebookActivity"/>
