Added infrastructure for multiple items per order, added pickup code to orders.
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@335 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -163,6 +163,7 @@
             >
         </activity>
 		<activity android:name=".NotificationsActivity"
+            android:label="Bartsy notifications"
             android:screenOrientation="portrait">
         </activity>
         <receiver
