Send Messages and receive messages
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@337 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -166,6 +166,10 @@
             android:label="Bartsy notifications"
             android:screenOrientation="portrait">
         </activity>
+        <activity android:name=".MessagesActivity"
+            android:screenOrientation="portrait">
+        </activity>
+        
         <receiver
             android:name="com.google.android.gcm.GCMBroadcastReceiver"
             android:permission="com.google.android.c2dm.permission.SEND" >
