Added the the menu functionality including the ability to order customizable cocktails.
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@393 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -151,6 +151,12 @@
             android:label="Select a base spirit"
             android:screenOrientation="portrait">
         </activity>
+        
+        <activity android:name=".ItemOptionsActivity"
+            android:label="Customize this item">
+        </activity>
+        
+        
         <activity android:name=".OrderCustomDrinkActivity"
             android:label="Customize and order..."
             android:screenOrientation="portrait">
