Several changes: 1. Fixed credit card display when displaying user profile from the server 2. Fixed handling of activities that get their inputs as global variables. These need special attention because those inputs may be erased if Android restarts the application object 3. Other bug fixes.
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@396 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -152,7 +152,7 @@
             android:screenOrientation="portrait">
         </activity>
         
-        <activity android:name=".ItemOptionsActivity"
+        <activity android:name=".CustomizeActivity"
             android:label="Customize this item">
         </activity>
         
