--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.vendsy.bartsy"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionCode="091"
+    android:versionName="0.9.1 - beta - 8/2/2013" >
 
     <uses-sdk
         android:minSdkVersion="8"
