The app title should not disappear when clicking to send a chat
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@417 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -176,7 +176,8 @@
             android:label="Bartsy Rewards"
             android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".MessagesActivity"
+        <activity android:name=".MessagesActivity" 
+            android:windowSoftInputMode="adjustResize"
             android:screenOrientation="portrait">
         </activity>
         
