--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.vendsy.bartsy"
     android:versionCode="091"
-    android:versionName="0.9.1 - beta - 8/2/2013" >
+    android:versionName="@string/app_version" >
 
     <uses-sdk
         android:minSdkVersion="8"
