--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -86,10 +86,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.facebook.LoginActivity"
-                  android:theme="@android:style/Theme.Translucent.NoTitleBar"
-                  android:label="@string/app_name" />
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/fb_app_id"/>
         
         <!-- Activities responsible for gathering payment info -->
         <activity
@@ -105,10 +101,8 @@
         </service>
         
         <!-- Facebook -->
-        <activity android:name="com.facebook.LoginActivity"
-                  android:theme="@android:style/Theme.Translucent.NoTitleBar"
-                  android:label="@string/app_name" />
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/fb_app_id"/>
+		<activity android:name="com.facebook.LoginActivity"/>
 
         <activity
             android:name=".VenueActivity"
