--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -101,8 +101,10 @@
         </service>
         
         <!-- Facebook -->
+        <activity android:name="com.facebook.LoginActivity"
+                  android:theme="@android:style/Theme.Translucent.NoTitleBar"
+                  android:label="@string/app_name" />
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/fb_app_id"/>
-		<activity android:name="com.facebook.LoginActivity"/>
 
         <activity
             android:name=".VenueActivity"
@@ -161,7 +163,6 @@
             android:label="Customize and order..."
             android:screenOrientation="portrait">
         </activity>
-        <activity android:name="com.vendsy.bartsy.FacebookActivity"/>
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait"
